--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:ui": "del /S /F /Q build && cd ../openfullstack/part2/phonebook && npm run build --prod && xcopy /E /I build ..\\..\\..\\fullstackopen-part3\\build",
+    "deploy": "git push heroku main",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
+    "logs:prod": "heroku logs --tail"
   },
   "repository": {
     "type": "git",
