--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "eslint": "^7.20.0",
     "nodemon": "^2.0.7"
   },
   "scripts": {
@@ -21,7 +22,8 @@
     "build:ui": "del /S /F /Q static && cd ../openfullstack/part2/phonebook && npm run build --prod && xcopy /E /I build ..\\..\\..\\fullstackopen-part3\\static",
     "deploy": "git push heroku master",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push origin master && npm run deploy",
-    "logs:prod": "heroku logs --tail"
+    "logs:prod": "heroku logs --tail",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
